# ModSync-Server

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: config.rs  main.rs  utils.rs
src/middleware/: secret.rs
src/router/: health.rs
src/router/mods/: download.rs  list.rs  mod.rs
