[package]
name = "ModSyncServer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11.0"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
dotenvy = "0.15"
envy = "0.4"